@@ -1,8 +1,10 @@
 DIST barman-1.3.0.tar.gz 86708 SHA256 732433c7f82627525208b9171f4b306ff6b62a2ae31382ef9430429dc6444f26 SHA512 7a215fdae67b11a821f9c047d095778f8bff83cb7342687ecf3f21c85a7fbc1c4d78f4807a656a2733a01c1ce53160b5c63f615de8091a0ac0c1c9e16a8480c7 WHIRLPOOL f8e9f9a8adb23d0933e17bb596eb611d1d397de333953dda66f41332a1b8df01cf58c81540b7ceb26992164e6b14ef8f3c8334e9f66bd166b84023437aa35dd8
 DIST barman-1.3.1.tar.gz 94922 SHA256 701903fcff76a8c86015daa3773e162d63c6e667d8b02866490d49c4407cc4d3 SHA512 b6338fbd83143d6ac5c16cd48a648858d92488352c08e452714d05fef1f2a45fa9b0e41c4a6ce702c2fd39c1df413fffcfe69645722f383af025718e5c0b3957 WHIRLPOOL ec72d9909086107334cafe471b034ae5f49b52ba86ecdf0d73395927b26a986868f96b55904301595e4b06408647a2b811864c5e2426c75b71488f310d7635eb
 DIST barman-1.3.2.tar.gz 95203 SHA256 945b8853550b424e5122a19ea9107646af2bfc634d227476520f1accf954977b SHA512 1f648f29dfeb793ac7893f892d6b720695de47e9c5f796585dc47a4e112db4ad501d39433cdb3669b72aab446f73389aeddd1afb6d408cc894b03cb816443b5c WHIRLPOOL eaf200e273b77c48899dd794127ba771b79b290e086431ae676affc9abe9ddfd5666d805a1c6b11aa72be62db82c5e161330c9b9202106dc9ed2b418025be189
+DIST barman-1.3.3.tar.gz 111462 SHA256 3e3af2fec16ac2836965a4c135d9ef4959ed690fb40ef06571d03ff526448468 SHA512 496ca24ee17b674fffe16a97b21b07f8c47837275ec8fbd781a9a1f94e52c5c8f04c2514aa5cc2e71a7b887bddd76dda815e2b4159b13c7c6ebda47c23bcebef WHIRLPOOL a10971486ea7462e131dce607106c3c6debe8097a2e335ca857bc94fa8b1048c16badb7c0646564fdbb9f4c63d23b4173f10a25293fe75924cc462ef268ba7a8
 EBUILD barman-1.3.0.ebuild 714 SHA256 45637c2d4d955bfa8517c332accd2a20802390cc585a4d032bcc004b6cffc4ce SHA512 f43fe7fcda1a210ad3125b56bfaa0e409c678f3d7920b361b408743e799ef4d7c488d01287e34f2ed5f958dac3f0a827dd250db22c67eb09f99fd3ad32563b1f WHIRLPOOL cfde60bd6e38612dd89a5cfc68ab9e112d30f7f1e4f516d4591063db3fbd8145de8f19b0c3a564349da054d2660d1b434e2302a82b0e2599dc5f68a0d159d33e
 EBUILD barman-1.3.1.ebuild 714 SHA256 c64c385bd73887d2cf157db5c179bd7f5d5b224cb311595ec7545663dd7baf15 SHA512 dc15ca123fdec4a9aefd94e749890f49f258f83de8434d172c0c0ab41bedaf5ce9a2e61c6879198e7324a366acfcf2a3cbb6e972dd420530953a8625e1c05399 WHIRLPOOL 78cf64550d77edd39c8e6e8ce558fe24955db40e75c3ea0689ae2b1c3872eea5b83107707795a2932ec17d5067824c8e4db2b3d8b71789731f531d00653e2112
 EBUILD barman-1.3.2.ebuild 714 SHA256 e440007466e3c0848da86f941408fbc5c539d780a944ca9e856337e26286448d SHA512 6700705e7bd03b85de1e99997a07cc636d6d01d9a6e2f62a6065983559ee5b1029c17e91b22ccbf8f24d719dce39e79b50d7dd21bdcb7db60607db50367f910d WHIRLPOOL cf60c1f2f6effc3768d330df8553eb2198c0a3fd2a52f156da8253e2be880d292189f62f2dff7d55087b14c456f4e902c4f8bdfa646b77dbb0229516cb5f6366
-MISC ChangeLog 1960 SHA256 dc3eeb360f4b9bd3ea7817c6ae7189e8f9b3a89adc404b907786e56123884ad6 SHA512 b1255bd9cb66fa328162807e67bb9f1def7680daeb56cea19df640a2c08a0d09cccb47f6fcc17429242b6bc62153478d0d6d2b2ddb3b547ea61d7569e2904f3e WHIRLPOOL 6c988e603c35d425ca34171d843b4b962190fbb64e650ba073356dad33d94a0087e46ce426c29985b3f4e42a6fbda46571777509a7273fe3a39e489c57c288d9
+EBUILD barman-1.3.3.ebuild 714 SHA256 805d3eabec741efb020ab358f4ecbd4419115be1463b290ccb2ccb2a2fb746a3 SHA512 748542153f224ef801419f33d2f662a3ad497215a36791cff37e021f708ff6ce08b07d63f8d6650847207383ee8f98ccd8d61fc374001bc3472b355b567b1fd9 WHIRLPOOL c12ecc3c1e4e680574f5d545e65606c96741c27782f3c6700800ab4787c8fdf080f4116919818d1b6be6857a45f78498a422d21132535ce115c82d9c1f39f164
+MISC ChangeLog 2069 SHA256 faef7a12719ff632a51f023916e4c1a5f8e991f6061263c30964c4264ffdf1e4 SHA512 d7aad475d32926aac1b464c0a5ea97eeff171b635925dcc052f235f23dee6c09738fbe4aa6e8004e780a62079fb99d304ab086e69a2ff366c0684fdfb7894d46 WHIRLPOOL ae2d5783cb64bb9cbf74c5549ed4fb3d022b3d5f22515b1ac68a2c7645f1a6d85119305363e86d7fba4beec539b4c97f6cc86728c25101b2062bd4233e404fa6
 MISC metadata.xml 233 SHA256 65209e280ca6de32a92e1a57301ff69fb3472e55ba07848d6f80405d35e92d47 SHA512 0d30bfb39315a04767e07896409f5d3954f8e954e20fcbac7b92bb9a636c9f61c50b1b2cf55e6c1db9a199a0edc159b5c8cc8f541efb9c4adafa28e3652cff7b WHIRLPOOL 027c5101e1cbc665c9d2ef240f73a874c9f49a9b70175c5947e012df61de484585088a46b6ce9078816e548e6bcc326e7223539cc999159eee2757d0a2eb1480
