@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/barman
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/barman/ChangeLog,v 1.13 2014/05/20 06:13:28 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/barman/ChangeLog,v 1.14 2014/08/21 05:45:24 patrick Exp $
+
+*barman-1.3.3 (21 Aug 2014)
+
+  21 Aug 2014; Patrick Lauer <patrick@gentoo.org> +barman-1.3.3.ebuild:
+  Bump
 
 *barman-1.3.2 (20 May 2014)
 
